# OvercookedHai716i

./: README.md  main.py  pyproject.toml
src/controller/: bot_controller.py  game_controller.py
src/model/: game_model.py
src/view/: game_view.py
